// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostMenuActionsContent - Snapshots > matches snapshot for all menu items visible (other user post) 1`] = `
<div
  class="group p-0"
  data-disabled="false"
  data-testid="dropdown-menu-item"
>
  <div
    data-class-name="flex items-center gap-2 overflow-hidden p-0"
    data-override-defaults="true"
    data-testid="container"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-user-round-plus size-4 shrink-0 transition-colors text-muted-foreground group-hover:text-foreground"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M2 21a8 8 0 0 1 13.292-6"
      />
      <circle
        cx="10"
        cy="8"
        r="5"
      />
      <path
        d="M19 16v6"
      />
      <path
        d="M22 19h-6"
      />
    </svg>
    <span
      class="truncate text-base font-medium transition-colors text-muted-foreground group-hover:text-foreground"
      data-testid="typography"
    >
      Follow Test User
    </span>
  </div>
</div>
`;

exports[`PostMenuActionsContent - Snapshots > matches snapshot for mobile sheet variant 1`] = `
<button
  class="justify-start overflow-hidden"
  data-testid="menu-button"
>
  <div
    data-class-name="flex items-center gap-2 overflow-hidden"
    data-override-defaults="true"
    data-testid="container"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-user-round-plus size-4 shrink-0 text-muted-foreground"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M2 21a8 8 0 0 1 13.292-6"
      />
      <circle
        cx="10"
        cy="8"
        r="5"
      />
      <path
        d="M19 16v6"
      />
      <path
        d="M22 19h-6"
      />
    </svg>
    <span
      class="truncate text-base font-medium text-muted-foreground"
      data-testid="typography"
    >
      Follow Test User
    </span>
  </div>
</button>
`;

exports[`PostMenuActionsContent - Snapshots > matches snapshot for own post menu items 1`] = `
<div
  class="group p-0"
  data-disabled="false"
  data-testid="dropdown-menu-item"
>
  <div
    data-class-name="flex items-center gap-2 overflow-hidden p-0"
    data-override-defaults="true"
    data-testid="container"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-key size-4 shrink-0 transition-colors text-muted-foreground group-hover:text-foreground"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m15.5 7.5 2.3 2.3a1 1 0 0 0 1.4 0l2.1-2.1a1 1 0 0 0 0-1.4L19 4"
      />
      <path
        d="m21 2-9.6 9.6"
      />
      <circle
        cx="7.5"
        cy="15.5"
        r="5.5"
      />
    </svg>
    <span
      class="truncate text-base font-medium transition-colors text-muted-foreground group-hover:text-foreground"
      data-testid="typography"
    >
      Copy pubky
    </span>
  </div>
</div>
`;
